# thenvoi-cli

./: .gitignore  AGENTS.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  README.md  agent_config.yaml.example  install.sh  pyproject.toml  thenvoi-cli.spec
.github/workflows/: ci.yml  release.yml
docs/: getting-started.md  troubleshooting.md
src/thenvoi_cli/: __init__.py  adapter_registry.py  cli.py  config_manager.py  exceptions.py  logging_config.py  output.py  process_manager.py  sdk_client.py
src/thenvoi_cli/adapters/: __init__.py  passthrough.py
src/thenvoi_cli/commands/: adapters.py  agents.py  config.py  participants.py  peers.py  rooms.py  run.py  status.py  test.py
tests/: __init__.py  conftest.py
tests/integration/: __init__.py  test_cli_integration.py
tests/unit/: __init__.py  test_adapter_registry.py  test_cli.py  test_config_manager.py  test_exceptions.py  test_output.py
